add: sliderの間隔・速度調整機能

--- a/memorandum/always-display-rits.html
+++ b/memorandum/always-display-rits.html
@@ -30,7 +30,7 @@
         document.getElementById("advisory")
       ];
       
-      new FullScSlider(mainFrames);
+      new FullScSlider(mainFrames,10,5);
     };
   </script>
 <title>always</title>
