--- a/memorandum/schoolWatch.html
+++ b/memorandum/schoolWatch.html
@@ -328,7 +328,7 @@ setInterval('ClockF()',1000);
         <center><h2><div id="Clock">00:00:00</div></h2></center>
         <h4><div id="SSM"></div><div id="SM">Now Loading...</div></h4>
     </td></tr>
-    </table><hr size="2" color="#FFFFFF" noshade>
+    </table><br>
     <table border="0" bordercolor=#FFFFFF" style="color:#FFFFFF" bgcolor="#CCCCCC" width="640">
     <tr><td>
     <h3 id="TT1">１限目　0900～1030</h3>
