--- a/memorandum/schoolWatch.html
+++ b/memorandum/schoolWatch.html
@@ -324,12 +324,12 @@ setInterval('ClockF()',1000);
 
 <body>
 <center>
-    <table border="0" bordercolor=#FFFFFF" style="color:#FFFFFF" bgcolor="#CCCCCC" width="640"><tr><td>
+    <table border="0" bordercolor=#FFFFFF" style="color:#FFFFFF" width="640"><tr><td>
         <center><h2><div id="Clock">00:00:00</div></h2></center>
         <h4><div id="SSM"></div><div id="SM">Now Loading...</div></h4>
     </td></tr>
     </table><br>
-    <table border="0" bordercolor=#FFFFFF" style="color:#FFFFFF" bgcolor="#CCCCCC" width="640">
+    <table border="0" bordercolor=#FFFFFF" style="color:#FFFFFF" width="640">
     <tr><td>
     <h3 id="TT1">１限目　0900～1030</h3>
     </td></tr>
