--- a/memorandum/schoolWatch.html
+++ b/memorandum/schoolWatch.html
@@ -47,8 +47,9 @@
             vertical-align: middle;
         }
         body{
-            height: 100px;
-            line-height: 100px;
+            height: 72vh;
+            line-height: 12vh;
+            padding-top: 10vh;
         }
     </style>
 <!--△CSSここまで△-->
