--- a/memorandum/always-display-clock.html
+++ b/memorandum/always-display-clock.html
@@ -76,89 +76,8 @@
   </section>
 
   <section id="trainTicker">
-    <style>  
-      @import url('https://fonts.googleapis.com/css?family=Oswald:700&display=swap');
-      .fixedTicker{
-        position: fixed;
-        bottom: 1.8vh;
-        border: none;
-        overflow: hidden;
-      }
-      .ticker{
-        left: 1.8vw;
-        height: 5.5vw;
-        width: 97.2vw;
-      }
-      .tickerOnepoint{
-        padding: 0.1vw;
-        left: 1vw;
-        height: 9.2vw;
-        width: 20vw;
-        background-color: rgb(32, 64, 170);
-        font-size:  2.8vw;
-        font-weight: 550;
-        text-align: center;
-        color: #fff;
-      }
-      #tickerFrame{
-        width: 102%;
-        border: none;
-        overflow: hidden;
-      }
-      #t_clock{
-        position:fixed;
-        bottom: 3vw;
-        right:  0;  
-        margin: 0;
-        font-family: 'Oswald', sans-serif;
-        font-size: 15vw;
-        font-weight:900;
-        transform: scaleX(0.9);
-        color: #FFF;
-        -webkit-text-stroke: .5vw #235;
-        text-stroke: .5vw #235;
-      }
-
-    </style>
-    <div class="fixedTicker tickerOnepoint">JR線運行情報</div>
-    <div class="fixedTicker ticker">
-      <iframe id="tickerFrame" name="tickerFrame"></iframe>
-    </div>
-    <div id="t_clock" />
-    
-    <script>
-      class Clock{
-        constructor(clockElm){
-          this.clockElm = clockElm;
-          setInterval(()=>{this.updateClock();},1000);
-        }
-        getNowTime(){
-          var nowTime = new Date();
-          this.h = nowTime.getHours();
-          this.m = nowTime.getMinutes();
-        }
-        writeClock(){
-          this.clockElm.innerHTML = (
-            `${("00" + this.h).slice(-2)}:${("00" + this.m).slice(-2)}`
-          );
-        }
-        updateClock(){
-          this.getNowTime();
-          this.writeClock();
-        }
-      }
-
-      function loadTrainTicker(){
-        window.open(
-          "https://script.google.com/macros/s/AKfycbxOBOfpSsnApd0GMwPm2xCLlBmnksqqUkLMICRFldFDBLt7Uv8/exec?mode=ticker"
-          ,"tickerFrame");
-      }
-      loadTrainTicker();
-      setInterval(loadTrainTicker,600000); // 10分ごとに更新
-
-      var clockElm = document.getElementById("t_clock");
-      new Clock(clockElm);
-    </script>
+    <link href="./td-ticker-clock-b.css" rel="stylesheet" type="text/css">
+    <script src="./td-ticker-b.js"></script>
   </section>
 
 </body>
