--- a/memorandum/always-display-rits.html
+++ b/memorandum/always-display-rits.html
@@ -100,100 +100,8 @@
   </section>
 
   <section id="trainTicker">
-    <style>  
-      @import url('https://fonts.googleapis.com/css?family=Open+Sans:800&display=swap');
-      .fixedTicker{
-        position: fixed;
-        bottom: 1.8vh;
-        border: none;
-        overflow: hidden;
-      }
-      .ticker{
-        left: 1.8vw;
-        height: 5.2vw;
-        width: 88.2vw;
-      }
-      .tickerOnepoint{
-        padding: 0.1vw;
-        left: 1vw;
-        height: 9vw;
-        width: 20vw;
-        background-color: rgb(32, 64, 170);
-        font-size:  2.8vw;
-        font-weight: 550;
-        text-align: center;
-        color: #fff;
-      }
-      .tickerClock{
-        padding: 0.1vw;
-        right:    1vw;
-        height:   9vw;
-        width:   8vw;
-        background-color: #EEE;
-        font-size:  2.8vw;
-        text-align: center;
-        color: rgb(32, 64, 170);
-        font-family: 'Open Sans', sans-serif;
-        font-weight: 900;
-      }
-      #tickerFrame{
-        width: 105%;
-        border: none;
-        overflow: hidden;
-      }
-      .t_logo{
-        height:      6vw;
-        line-height: 3vw;
-      }
-      #t_clock{
-        margin: -0.5vw 0 0 -0.1vw;
-        font-size: 3vw;
-        transform: scaleX(0.9);
-      }
-
-    </style>
-    <div class="fixedTicker tickerOnepoint">JR線運行情報</div>
-    <div class="fixedTicker ticker">
-      <iframe id="tickerFrame" name="tickerFrame"></iframe>
-    </div>
-    <div class="fixedTicker tickerClock">
-      <div class="t_logo">現在<br>時刻</div>
-      <div id="t_clock" />
-    </div>
-    
-    <script>
-      class Clock{
-        constructor(clockElm){
-          this.clockElm = clockElm;
-          setInterval(()=>{this.updateClock();},1000);
-        }
-        getNowTime(){
-          var nowTime = new Date();
-          this.h = nowTime.getHours();
-          this.m = nowTime.getMinutes();
-        }
-        writeClock(){
-          this.clockElm.innerHTML = (
-            `${("00" + this.h).slice(-2)}:${("00" + this.m).slice(-2)}`
-          );
-        }
-        updateClock(){
-          this.getNowTime();
-          this.writeClock();
-        }
-      }
-
-      function loadTrainTicker(){
-        window.open(
-          "https://script.google.com/macros/s/AKfycbxOBOfpSsnApd0GMwPm2xCLlBmnksqqUkLMICRFldFDBLt7Uv8/exec?mode=ticker"
-          ,"tickerFrame");
-      }
-      loadTrainTicker();
-      setInterval(loadTrainTicker,600000); // 10分ごとに更新
-
-      var clockElm = document.getElementById("t_clock");
-      new Clock(clockElm);
-    </script>
+    <link href="./td-ticker-clock.css" rel="stylesheet" type="text/css">
+    <script src="./td-ticker.js"></script>
   </section>
 
 </body>
