--- a/memorandum/always-display-ex.html
+++ b/memorandum/always-display-ex.html
@@ -21,74 +21,13 @@
       },
 
     ];
-  </script>
-  <script>
-
-    function loadIframe(page){
-      window.open(page.url,page.iframeId);
-      if(page.reloadDur > 0){
-        setInterval(()=>{window.open(page.url,page.iframeId)}, page.reloadDur*1000);
-      }
-    }
-
-    window.onload = function(){
-      slideDur = getParam("slideDur");
-      if(!slideDur) slideDur = 10;
-
-      var mainFrames = [];
-
-      var body = document.getElementsByTagName("body")[0];
-
-      for(page of pages){
-        let iframe  = document.createElement("iframe");
-        iframe.id   = iframe.name = page.iframeId;
-        iframe.className = "fullSc";
-        body.appendChild(iframe);
-        loadIframe(page);
-        mainFrames.push(document.getElementById(page.iframeId));
-      }
-      
-      new FullScSlider(mainFrames,slideDur,5);
-    };
-    
-    function getParam(name) {
-      let url = window.location.href;
-      name = name.replace(/[\[\]]/g, "\\$&");
-      var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-          results = regex.exec(url);
-      if (!results) return null;
-      if (!results[2]) return '';
-      return decodeURIComponent(results[2].replace(/\+/g, " "));
-    }
-  </script>
+  </script>  
+  <script src="./always-main.js"></script>
 <title>always</title>
-<style>
-  body{
-    margin:  0;
-    padding: 0;
-    background: #235;
-  }
-  iframe.fullSc{
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    border:0;
-  }
-</style>
+<link href="./always-style.css" rel="stylesheet" type="text/css">
+<link href="./td-ticker-clock.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <section id="main">
-    <iframe class="fullSc" id="weather"   name="weather"   allowusermedia="true"></iframe>
-    <iframe class="fullSc" id="rainRadar" name="rainRadar" allowusermedia="true"></iframe>
-    <iframe class="fullSc" id="advisory"  name="advisory"  allowusermedia="true"></iframe>
-  </section>
-
-  <section id="trainTicker">
-    <link href="./td-ticker-clock.css" rel="stylesheet" type="text/css">
-    <script src="./td-ticker.js"></script>
-  </section>
-
+  <script src="./td-ticker.js"></script>
 </body>
 </html>
