--- a/memorandum/a-rccnavi.html
+++ b/memorandum/a-rccnavi.html
@@ -137,9 +137,9 @@
       var act      = getParam("act")   || "移動";
       var event    = getParam("event") || "定例会議";
       var isNext   = getParam("next")  || true;
-      var screen1Dur        = getParam("dur1")  || 30;
-      var screen2Dur        = getParam("dur2")  || 30;
-      var switchScreen1Time = getParam("time1") || 25;
+      var screen1Dur        = getParam("dur1")  || 35;
+      var screen2Dur        = getParam("dur2")  || 15;
+      var switchScreen1Time = getParam("time1") || 20;
       var switchScreen2Time = getParam("time2") || 60;
       var roomUttr = (room1 + room2).replace(/1/g,"いち").replace(/2/g,"に").replace(/3/g,"さん").replace(/4/g,"し").replace(/5/g,"ご")
                       .replace(/6/g,"ろく").replace(/7/g,"なな").replace(/8/g,"はち").replace(/9/g,"きゅう").replace(/0/g,"まる");
@@ -148,6 +148,8 @@
       document.getElementById("room2").innerHTML = room2;
       document.getElementById("event").innerHTML = event;
       document.getElementById("act"  ).innerHTML = act;
+      document.getElementById("act"  ).style.fontSize = (70/act.length) + "vw";
+      
       
       function showact(){
         let actElm = document.getElementById("act");
@@ -169,7 +171,12 @@
         setTimeout(()=>{
           speak(act + "。。" + act + "。。" + act);
         },4000);
-        interv1 = setInterval(showact,1000);
+        interv1 = setInterval(()=>{
+          try{
+            showact();
+          }catch(e){
+            clearInterval(interv1);
+          }} ,1000);
         setTimeout(()=>{clearInterval(interv1); hideElm(document.getElementById("act"));}, screen1Dur * 1000);
       },switchScreen1Time * 1000);
 
