--- a/memorandum/always-display-rits.html
+++ b/memorandum/always-display-rits.html
@@ -51,35 +51,35 @@
         "hour" : 8, // 鳴動開始時刻（時）
         "min"  : 50, // 鳴動開始時刻（分
         "dur"  : 1,  // 鳴動継続時間（分間）
-        "queryParam" : "?event=１限&act=教室確認&time2=999&dur1=10&room1=部&room2=室" // rccNaviに渡すクエリパラメータ
+        "queryParam" : "?event=１限&act=授業&time2=999&dur1=10&room1=部&room2=室" // rccNaviに渡すクエリパラメータ
       },
       { // [2] : ２限
         "day"  : "*" , // 1:月 ~ 5:金
         "hour" : 10, // 鳴動開始時刻（時）
         "min"  : 30, // 鳴動開始時刻（分
         "dur"  : 1,  // 鳴動継続時間（分間）
-        "queryParam" : "?event=２限&act=教室確認&time2=999&dur1=10&room1=部&room2=室" // rccNaviに渡すクエリパラメータ
+        "queryParam" : "?event=２限&act=授業&time2=999&dur1=10&room1=部&room2=室" // rccNaviに渡すクエリパラメータ
       },
       { // [3] : ３限
         "day"  : "*" , // 1:月 ~ 5:金
         "hour" : 12, // 鳴動開始時刻（時）
         "min"  : 50, // 鳴動開始時刻（分
         "dur"  : 1,  // 鳴動継続時間（分間）
-        "queryParam" : "?event=３限&act=教室確認&time2=999&dur1=10&room1=部&room2=室" // rccNaviに渡すクエリパラメータ
+        "queryParam" : "?event=３限&act=授業&time2=999&dur1=10&room1=部&room2=室" // rccNaviに渡すクエリパラメータ
       },
       { // [4] : ４限
         "day"  : "*" , // 1:月 ~ 5:金
         "hour" : 14, // 鳴動開始時刻（時）
         "min"  : 30, // 鳴動開始時刻（分
         "dur"  : 1,  // 鳴動継続時間（分間）
-        "queryParam" : "?event=４限&act=教室確認&time2=999&dur1=10&room1=部&room2=室" // rccNaviに渡すクエリパラメータ
+        "queryParam" : "?event=４限&act=授業&time2=999&dur1=10&room1=部&room2=室" // rccNaviに渡すクエリパラメータ
       },
       { // [5] : ５限
         "day"  : "*" , // 1:月 ~ 5:金
         "hour" : 16, // 鳴動開始時刻（時）
         "min"  : 10, // 鳴動開始時刻（分
         "dur"  : 1,  // 鳴動継続時間（分間）
-        "queryParam" : "?event=５限&act=教室確認&time2=999&dur1=10&room1=部&room2=室" // rccNaviに渡すクエリパラメータ
+        "queryParam" : "?event=５限&act=授業&time2=999&dur1=10&room1=部&room2=室" // rccNaviに渡すクエリパラメータ
       },{ // [6] : 上回生会議情報
         "day"  : 2 , // 1:月 ~ 5:金
         "hour" : 17, // 鳴動開始時刻（時）
